restructure the lexer && update README.md

--- a/occc.opam
+++ b/occc.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 synopsis: "implementation of book 'Write a C Compiler'"
 description:
-  "`occc` is the self implementation for the book *Writing a C Compiler*. It's a compiler for a subset of C, targeting x86-64 assembly."
+  "`occc` is a simple C compiler target for x86_64 ISA, adapted from book *Writing a C Compiler* "
 maintainer: ["Hsin <genesisjxd@gmail.com>"]
 authors: ["Hsin <genesisjxd@gmail.com>"]
 license: "MIT"
