finish Chapter 9 : support function definition and function call

--- a/lib/dune
+++ b/lib/dune
@@ -30,7 +30,11 @@
   replace_pseudos
   instruction_fixup
   resolve
-  label_loops)
+  label_loops
+  typecheck
+  types
+  symbols
+  rounding)
  (libraries re camlp-streams)
  (preprocess
   (pps ppx_deriving.show))
