--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "ocaml.sandbox": {
         "kind": "opam",
         "switch": "nqcc"
-    }
+    },
+    "kiroAgent.configureMCP": "Disabled"
 }
